crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__default_view_frames_the_slide_in_a_rounded_card.snap
---
source: crates/fireside-tui/src/render/tests.rs
expression: "screen(&app, 80, 24)"
---
 Hello, Fireside                                             intro  ·  1/6 seen 
──◉───○───○─────────────────────────────────────────────────────────────────────
                                                                                
╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│                               Hello, Fireside                                │
│                               ───────────────                                │
│                                                                              │
│                  ─ ascii-art ──────────────────────────────────              │
│                     _____ ___ ____  _____ ____ ___ ____  _____               │
│                    |  ___|_ _|  _ \| ____/ ___|_ _|  _ \| ____|              │
│                    | |_   | || |_) |  _| \___ \| || | | |  _|                │
│                    |  _|  | ||  _ <| |___ ___) | || |_| | |___               │
│                    |_|   |___|_| \_\_____|____/___|____/|_____|              │
│                                                                              │
│                  ──────────────────────────────────────────────              │
│                                                                              │
│            A portable format for graph-structured presentations.             │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
                                                                                
 Space next  ·  ← back  ·  m map  ·  e edit  ·  ? help  ·  q quit
