crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__every_scene_renders_at_60x18-2.snap
---
source: crates/fireside-tui/src/render/tests.rs
expression: "screen(&app, 60, 18)"
---
 Hello, Fireside                      features  ·  2/6 seen 
──●───◉───○─────────────────────────────────────────────────
                                                            
╭──────────────────────────────────────────────────────────╮
│                                                          │
│   ▎ Core Features                                        │
│                                                          │
│     • Graph-native traversal with explicit edges         │
│     • Branching with decision points                     │
│     • 8 content block types                              │
│     • Two-tier validation (schema + semantic)            │
│                                                          │
│                    ─────────────────                     │
│                                             ▼ more (↓)   │
│                                                          │
╰──────────────────────────────────────────────────────────╯
                                                            
 Space next  ·  ← back  ·  m map  ·  e edit  ·  ? help  ·  q
