crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__every_scene_renders_at_60x18-5.snap
---
source: crates/fireside-tui/src/render/tests.rs
assertion_line: 264
expression: "screen(&app, 60, 18)"
---
 Hello, Fireside                   layout-demo  ·  4/6 seen 
─╭ Map — Enter jumps ─────────────────────────────────────╮─
 │ │                                                     ▲│ 
╭│ ●            features                                  │╮
││ │                                                      ││
││ ●            choose                                    ││
││ ├──┬──╮     [a] code-demo · [b] layout-demo · [c] thank││
││ ○  ╎  ╎      code-demo                                 ││
││ ╰──┼──┼──╮                                             ││
││ ╭──╯  ╎  ╎                                             ││
││ ◉     ╎  ╎   layout-demo                               ││
││ ├─────┴──╯                                             ││
││ ○            thanks  ■                                 ││
││                                                        ││
││ ◉ you are here  ● seen  ○ not yet  ■ end               ││
╰│ ↑↓ move · Enter jump · Esc close                       │╯
 ╰────────────────────────────────────────────────────────╯ 
 Space next  ·  ← back  ·  m map  ·  ? help  ·  q quit
