crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__every_scene_renders_at_60x18-6.snap
---
source: crates/fireside-tui/src/render/tests.rs
assertion_line: 187
expression: "screen(&app, 60, 18)"
---
 Hello, Fireside                   layout-demo  ·  4/6 seen 
──●╭ Keys ──────────────────────────────────────────────╮───
   │ Space / → / Enter next slide                       │   
╭──│ ← / Backspace     previous slide                   │──╮
│  │ ↑ / ↓             pick a choice · scroll           │  │
│  │ 1–9 or a letter   take a choice directly           │  │
│  │ m                 map — see and jump anywhere      │  │
│  │ click             select a map row or branch option│  │
│  │ f                 fullscreen on/off                │  │
│  │ s                 speaker notes                    │  │
│  │ e                 quick-edit this slide's text     │  │
│  │ t                 elapsed timer                    │  │
│  │ q                 quit                             │  │
│  │                                                    │  │
│  │ press any key to close                             │  │
╰──╰────────────────────────────────────────────────────╯──╯
                                                            
 Space next  ·  ← back  ·  m map  ·  e edit  ·  ? help  ·  q
