crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__every_scene_renders_at_60x18.snap
---
source: crates/fireside-tui/src/render/tests.rs
expression: "screen(&app, 60, 18)"
---
 Hello, Fireside                         intro  ·  1/6 seen 
──◉───○───○─────────────────────────────────────────────────
                                                            
╭──────────────────────────────────────────────────────────╮
│                                                          │
│                     Hello, Fireside                      │
│                     ───────────────                      │
│                                                          │
│         _____ ___ ____  _____ ____ ___ ____  __…         │
│        |  ___|_ _|  _ \| ____/ ___|_ _|  _ \| _…         │
│        | |_   | || |_) |  _| \___ \| || | | |  …         │
│        |  _|  | ||  _ <| |___ ___) | || |_| | |…         │
│        |_|   |___|_| \_\_____|____/___|____/|__…         │
│                                             ▼ more (↓)   │
│                                                          │
╰──────────────────────────────────────────────────────────╯
                                                            
 Space next  ·  ← back  ·  m map  ·  ? help  ·  q quit
