crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__fullscreen_uses_the_full_width_not_the_measure.snap
---
source: crates/fireside-tui/src/render/tests.rs
expression: "screen(&app, 120, 30)"
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 ▎ Code Block                                                                                                           
                                                                                                                        
 ─ rust ─────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
  1 │ fn main() {                                                                                                       
  2 │     let graph = Graph::load("hello.json")?;                                                                       
  3 │     let engine = Engine::new(graph);                                                                              
  4 │     engine.present()                                                                                              
  5 │ }                                                                                                                 
 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 Space next  ·  ← back  ·  m map  ·  e edit  ·  ? help  ·  q quit
