crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__hidden_column_reserves_no_width_until_revealed_at_80x24-2.snap
---
source: crates/fireside-tui/src/render/tests.rs
expression: "screen(&app, 80, 24)"
---
 Fireside                                                        a  ·  1/1 seen 
──◉─■───────────────────────────────────────────────────────────────────────────
                                                                                
╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│   Left column                          Right column                          │
│                                                                              │
│                         ──────────── ■ ────────────                          │
│                               End of this path                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
                                                                                
 ← back  ·  m map  ·  e edit  ·  ? help  ·  q quit
