crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__hidden_column_reserves_no_width_until_revealed_at_80x24.snap
---
source: crates/fireside-tui/src/render/tests.rs
assertion_line: 846
expression: "screen(&app, 80, 24)"
---
 Fireside                                                        a  ·  1/1 seen 
──◉─■───────────────────────────────────────────────────────────────────────────
                                                                                
╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│   Left column                                                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
                                                                                
 0/1 revealed  ·  Space reveal  ·  ← back  ·  m map  ·  ? help  ·  q quit
