crates/fireside-tui/src/render/snapshots/fireside_tui__render__tests__the_ending_is_centered_not_left_aligned.snap
---
source: crates/fireside-tui/src/render/tests.rs
expression: "screen(&app, 80, 24)"
---
 Hello, Fireside                                            thanks  ·  4/6 seen 
──●───●───●───◉─■───────────────────────────────────────────────────────────────
                                                                                
╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                   Thanks!                                    │
│                                   ───────                                    │
│                                                                              │
│                Four operations. Seven blocks. Explicit edges.                │
│                                                                              │
│                         ──────────── ■ ────────────                          │
│                               End of this path                               │
│                                                                              │
│                      intro → features → choose → thanks                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
                                                                                
 ← back  ·  m map  ·  e edit  ·  ? help  ·  q quit
